@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1655 2022/12/17 15:17:42 mef Exp $
+# $NetBSD: Makefile,v 1.1656 2022/12/18 09:28:31 mef Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -7,6 +7,7 @@ SUBDIR+=	R-RCurl
 SUBDIR+=	R-bslib
 SUBDIR+=	R-curl
 SUBDIR+=	R-diffviewer
+SUBDIR+=	R-downlit
 SUBDIR+=	R-gargle
 SUBDIR+=	R-gh
 SUBDIR+=	R-googledrive
