@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.6219 2022/12/18 09:24:01 mef Exp $
+$NetBSD: CHANGES-2022,v 1.6220 2022/12/18 09:28:31 mef Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -9333,3 +9333,5 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated math/R-RNetCDF to 2.6.1 [mef 2022-12-18]
 	Updated math/R-RPostgreSQL to 0.7.4 [mef 2022-12-18]
 	Updated math/R-RcppEigen to 0.3.3.9.3 [mef 2022-12-18]
+	Added benchmarks/R-profvis version 0.3.7 [mef 2022-12-18]
+	Added www/R-downlit version 0.4.0 [mef 2022-12-18]
